--- a/config/docker/docker-compose.yml
+++ b/config/docker/docker-compose.yml
@@ -1,35 +1,24 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:13
     environment:
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
       POSTGRES_DB: healthvision
     ports:
       - "5432:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-      
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   api-gateway:
-    image: gcr.io/${GCP_PROJECT_ID}/api-gateway:latest
+    image: ghcr.io/prakashguy50/healthvision-api-gateway:latest
     environment:
       SPRING_PROFILES_ACTIVE: dev
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/healthvision
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_CLOUD_GATEWAY_ROUTES_0_URI: http://image-service:8080
+    depends_on:
+      postgres:
+        condition: service_healthy
     ports:
       - "8080:8080"
-    depends_on:
-      - postgres
-      
-  image-service:
-    image: gcr.io/${GCP_PROJECT_ID}/image-service:latest
-    environment:
-      SPRING_PROFILES_ACTIVE: dev
-      GCS_BUCKET: healthvision-dev-data
-    depends_on:
-      - api-gateway
-      
-volumes:
-  pgdata:
