Trigger GKE workflow

--- a/config/k8s/deployment.yml
+++ b/config/k8s/deployment.yml
@@ -55,3 +55,4 @@ metadata:
 data:
   gcs.bucket: "healthvision-data-bucket"
   pubsub.topic: "image-processed"# Trigger deployment Thu Mar 27 18:01:32 IST 2025
+# Trigger GKE deployment
