Trigger GKE workflow

--- a/config/k8s/deployment.yml
+++ b/config/k8s/deployment.yml
@@ -56,3 +56,4 @@ data:
   gcs.bucket: "healthvision-data-bucket"
   pubsub.topic: "image-processed"# Trigger deployment Thu Mar 27 18:01:32 IST 2025
 # Trigger GKE deployment
+# Thu Mar 27 18:25:19 IST 2025 - Trigger deployment
