--- a/config/k8s/deployment.yml
+++ b/config/k8s/deployment.yml
@@ -57,3 +57,4 @@ data:
   pubsub.topic: "image-processed"# Trigger deployment Thu Mar 27 18:01:32 IST 2025
 # Trigger GKE deployment
 # Thu Mar 27 18:25:19 IST 2025 - Trigger deployment
+# Thu Mar 27 18:27:33 IST 2025 --- Trigger deployment
