Trigger GKE workflow

--- a/config/k8s/deployment.yml
+++ b/config/k8s/deployment.yml
@@ -58,3 +58,4 @@ data:
 # Trigger GKE deployment
 # Thu Mar 27 18:25:19 IST 2025 - Trigger deployment
 # Thu Mar 27 18:27:33 IST 2025 --- Trigger deployment
+# Thu Mar 27 18:45:54 IST 2025::: Trigger deployment
