GKE config changes

--- a/.github/workflows/cd-gke.yml
+++ b/.github/workflows/cd-gke.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Configure kubectl
       run: |
         gcloud container clusters get-credentials healthvision-cluster \
-          --region us-central1 \
+          --region us-central1-a \
           --project ${{ secrets.GCP_PROJECT_ID }}
           
     - name: Deploy to GKE
