--- a/.github/workflows/cd-gke.yml
+++ b/.github/workflows/cd-gke.yml
@@ -26,6 +26,12 @@ jobs:
         
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
+     
+    - name: Install gke-gcloud-auth-plugin
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-cloud-cli-gke-gcloud-auth-plugin
+
       
     - name: Configure kubectl
       run: |
