--- a/config/k8s/deployment.yml
+++ b/config/k8s/deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: image-service
-        image: gcr.io/PROJECT_ID/image-service:latest
+        image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/image-service:latest
         ports:
         - containerPort: 8080
         env:
@@ -41,12 +41,16 @@ spec:
             port: 8080
           initialDelaySeconds: 20
           periodSeconds: 5
+          failureThreshold: 3
         livenessProbe:
           httpGet:
             path: /actuator/health
             port: 8080
           initialDelaySeconds: 30
           periodSeconds: 10
+          failureThreshold: 3
+        imagePullPolicy: Always
+      restartPolicy: Always
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -54,8 +58,4 @@ metadata:
   name: app-config
 data:
   gcs.bucket: "healthvision-data-bucket"
-  pubsub.topic: "image-processed"# Trigger deployment Thu Mar 27 18:01:32 IST 2025
-# Trigger GKE deployment
-# Thu Mar 27 18:25:19 IST 2025 - Trigger deployment
-# Thu Mar 27 18:27:33 IST 2025 --- Trigger deployment
-# Thu Mar 27 18:45:54 IST 2025::: Trigger deployment
+  pubsub.topic: "image-processed"
