--- a/.github/workflows/cd-gke.yml
+++ b/.github/workflows/cd-gke.yml
@@ -36,8 +36,7 @@ jobs:
     - name: Build and Push API Docker Image to Artifact Registry
       run: |
         gcloud builds submit D:/Prakash/Projects/healthvision-ai-gcp/ \
-          --config=config/docker/cloudbuild.api.yaml
-
+          --config=D:/Prakash/Projects/healthvision-ai-gcp/config/docker/cloudbuild.api.yaml
 
     - name: Configure kubectl
       run: |
