--- a/.github/workflows/cd-gke.yml
+++ b/.github/workflows/cd-gke.yml
@@ -24,6 +24,10 @@ jobs:
       with:
         credentials_json: ${{ secrets.GCP_CREDENTIALS }}
         
+    - name: Set GCP Project
+      run: |
+        gcloud config set project healthvison-aiml
+        
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
@@ -42,7 +46,7 @@ jobs:
       run: |
         gcloud container clusters get-credentials healthvision-cluster \
           --region us-central1-a \
-          --project ${{ secrets.GCP_PROJECT_ID }}
+          --project healthvison-aiml
         
     - name: Deploy to GKE
       run: |
