docker files updated

--- a/config/docker/cloudbuild.api.yaml
+++ b/config/docker/cloudbuild.api.yaml
@@ -1,9 +1,20 @@
+substitutions:
+  _TAG: 'latest'
+  _REPO: 'image-service-repo'
+
 steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [
-      'build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/image-service-repo/image-service:latest',
+      'build',
+      '--cache-from', 'us-central1-docker.pkg.dev/$PROJECT_ID/${_REPO}/image-service:${_TAG}',
+      '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/${_REPO}/image-service:${_TAG}',
       '-f', 'config/docker/Dockerfile.api', '.'
     ]
 
 images:
-  - 'us-central1-docker.pkg.dev/$PROJECT_ID/image-service-repo/image-service:latest'
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/${_REPO}/image-service:${_TAG}'
+
+options:
+  logging: CLOUD_LOGGING_ONLY
+
+timeout: '1200s' # Set a timeout of 20 minutes (optional, adjust as needed)
