--- a/.github/workflows/cd-gke.yml
+++ b/.github/workflows/cd-gke.yml
@@ -6,16 +6,13 @@ on:
     paths:
       - 'config/k8s/**'
       - '.github/workflows/cd-gke.yml'
-      - 'services/**'
   workflow_dispatch:
-  schedule:
-    - cron: '0 12 * * *'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     environment: production
-
+    
     steps:
     - uses: actions/checkout@v4
       
@@ -24,37 +21,17 @@ jobs:
       with:
         credentials_json: ${{ secrets.GCP_CREDENTIALS }}
         
-    - name: Set GCP Project
-      run: |
-        gcloud config set project healthvison-aiml
-        
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
-      with:
-        install_components: 'gke-gcloud-auth-plugin'
-        
-    - name: Configure Docker for Artifact Registry
-      run: |
-        gcloud auth configure-docker us-central1-docker.pkg.dev
-        
-    - name: Build and Push API Docker Image to Artifact Registry
-      run: |
-        gcloud builds submit . \
-          --config=config/docker/cloudbuild.api.yaml
-        
+      
     - name: Configure kubectl
       run: |
-        gcloud container clusters get-credentials healthvision-cluster \
-          --region us-central1-a \
-          --project healthvison-aiml
-        
+        gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} \
+          --region ${{ secrets.GCP_REGION }} \
+          --project ${{ secrets.GCP_PROJECT_ID }}
+          
     - name: Deploy to GKE
       run: |
-        set -e
-        kubectl apply -f config/k8s/ -R
-        kubectl rollout status deployment/image-service || exit 1
-        kubectl rollout status deployment/api-gateway || exit 1
-        
-    - name: Debug
-      run: |
-        kubectl get pods -n default
+        kubectl apply -f config/k8s/
+        kubectl rollout status deployment/api-gateway
+        kubectl rollout status deployment/image-service
