--- a/.github/workflows/ci-java.yml
+++ b/.github/workflows/ci-java.yml
@@ -12,7 +12,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     services:
       postgres:
         image: postgres:13
@@ -20,7 +19,6 @@ jobs:
           POSTGRES_PASSWORD: postgres
         ports:
           - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
     - uses: actions/checkout@v4
@@ -30,7 +28,6 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: 'maven'
         
     - name: Build with Maven
       run: mvn -B package --file pom.xml
@@ -40,22 +37,15 @@ jobs:
       
     - name: Build Docker images
       run: |
-        docker build -t ghcr.io/${{ github.repository_owner }}/healthvision-api-gateway:latest \
-          -f config/docker/Dockerfile.api \
-          --build-arg JAR_FILE=services/api-gateway/target/*.jar .
-          
-        docker build -t ghcr.io/${{ github.repository_owner }}/healthvision-image-service:latest \
-          -f config/docker/Dockerfile.api \
-          --build-arg JAR_FILE=services/image-service/target/*.jar .
-          
-    - name: Log in to GitHub Container Registry
+        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/api-gateway:latest -f config/docker/Dockerfile.api --build-arg JAR_FILE=services/api-gateway/target/*.jar .
+        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/image-service:latest -f config/docker/Dockerfile.api --build-arg JAR_FILE=services/image-service/target/*.jar .
+        
+    - name: Push to GCR
       uses: docker/login-action@v2
       with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-        
-    - name: Push images to GHCR
+        registry: gcr.io
+        username: _json_key
+        password: ${{ secrets.GCP_CREDENTIALS }}
       run: |
-        docker push ghcr.io/${{ github.repository_owner }}/healthvision-api-gateway:latest
-        docker push ghcr.io/${{ github.repository_owner }}/healthvision-image-service:latest
+        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/api-gateway:latest
+        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/image-service:latest
