--- a/ml-pipeline/model_training/requirements.txt
+++ b/ml-pipeline/model_training/requirements.txt
@@ -1,7 +1,8 @@
 tensorflow==2.12.0
 google-cloud-aiplatform==1.26.0
 google-cloud-storage==2.8.0
-pandas==2.0.2
-scikit-learn==1.2.2
-alibi-detect==0.11.2
 pydicom==2.3.1
+scikit-learn==1.2.2
+pandas==2.0.2
+numpy==1.23.5
+google-cloud-monitoring==2.15.0
